--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,11 +25,11 @@ html, body {
 }
 .box input:focus {
     outline: none;
-    border: 2px solid rgb(205, 163, 163);
+    border: 2px solid pink;
 }
 .box{
     backdrop-filter: blur(5px);
-    /*border: 1px solid #fff;*/
+    border: 1px solid #fff;
     box-shadow: 0 4px 6px rgba(255,255,255,0.1);
     text-align: center;
     padding-bottom: 50px;
