--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,6 +33,7 @@ html, body {
     box-shadow: 0 4px 6px rgba(255,255,255,0.1);
     text-align: center;
     padding-bottom: 50px;
+    /*color: #c585a5;*/
 }
 /*#background {*/
 /*    position: relative;*/
