--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
 }
 .box input{
     padding: 10px;
@@ -34,3 +34,4 @@ html, body {
     text-align: center;
     padding-bottom: 50px;
 }
+
